[tool.poetry]
name = "vram-estimator"
version = "0.1.0"
description = ""
authors = ["Adrian Hagen <adrian.hagen@sap.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.7"
transformers = "^4.47.1"
ipykernel = "^6.29.5"
torch = "^2.5.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
